force-app/main/default/objects/Account/fields/Active_Communities_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Communities_Count__c</fullName>
    <label>Active Communities</label>
    <description>Count of active Community__c records for this division. Populated nightly by DivisionKpiRecalcBatch.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>