force-app/main/default/objects/Account/fields/Active_Lot_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Lot_Count__c</fullName>
    <description>Division total active lots: sum of community lot counts. Maintained by DivisionKpiRecalcBatch. System-maintained; set FLS read-only. Spec Section 3.5.</description>
    <label>Active Lots (division)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>