force-app/main/default/objects/Account/fields/Active_Markets__c.field-meta.xml
<CustomField>
    <fullName>Active_Markets__c</fullName>
    <description>System-maintained display string of markets the parent operates in. FLS read-only.</description>
    <label>Active Markets</label>
    <type>TextArea</type>
</CustomField>