force-app/main/default/objects/Account/fields/Additional_Scope_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Scope_Notes__c</fullName>
    <label>Additional Scope / Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>