force-app/main/default/objects/Account/fields/AP_Invoicing_Email__c.field-meta.xml
<CustomField>
    <fullName>AP_Invoicing_Email__c</fullName>
    <label>AP / Invoicing Email</label>
    <type>Email</type>
</CustomField>