force-app/main/default/objects/Account/fields/Aqua_Customer__c.field-meta.xml
<CustomField>
    <fullName>Aqua_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aqua Customer</label>
    <type>Checkbox</type>
</CustomField>