force-app/main/default/objects/Account/fields/AR_Balance__c.field-meta.xml
<CustomField>
    <fullName>AR_Balance__c</fullName>
    <description>Outstanding accounts receivable balance for this account. Maintained by LovingRollupBatch.</description>
    <label>AR Balance</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>