force-app/main/default/objects/Account/fields/Auto_Liability_Limit__c.field-meta.xml
<CustomField>
    <fullName>Auto_Liability_Limit__c</fullName>
    <label>Auto Liability Limit</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>