force-app/main/default/objects/Account/fields/Back_Charge_Admin_Fee_Pct__c.field-meta.xml
<CustomField>
    <fullName>Back_Charge_Admin_Fee_Pct__c</fullName>
    <label>Back-Charge Admin Fee %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>