force-app/main/default/objects/Account/fields/Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Billing_Method__c</fullName>
    <label>Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SupplyPro</fullName>
            </value>
            <value>
                <fullName>Invoice — Net 30</fullName>
            </value>
            <value>
                <fullName>Invoice — Net 45</fullName>
            </value>
            <value>
                <fullName>Invoice — Net 60</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>