force-app/main/default/objects/Account/fields/BMG_Link__c.field-meta.xml
<CustomField>
    <fullName>BMG_Link__c</fullName>
    <label>BMG Link</label>
    <type>Url</type>
</CustomField>