force-app/main/default/objects/Account/fields/BMG_Package_Code__c.field-meta.xml
<CustomField>
    <fullName>BMG_Package_Code__c</fullName>
    <description>DRHCLTA-PKG2 etc.</description>
    <label>BMG Package Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>