force-app/main/default/objects/Account/fields/BMG_Pricing_Book__c.field-meta.xml
<CustomField>
    <fullName>BMG_Pricing_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The currently active BMG pricing book for this division. New quotes and community packages default to this book.</description>
    <label>BMG Pricing Book</label>
    <referenceTo>Builder_Pricing_Book__c</referenceTo>
    <relationshipLabel>Division Accounts</relationshipLabel>
    <relationshipName>Division_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>