force-app/main/default/objects/Account/fields/BMG_Pricing_Link__c.field-meta.xml
<CustomField>
    <fullName>BMG_Pricing_Link__c</fullName>
    <label>BMG Pricing Link</label>
    <type>Url</type>
</CustomField>