force-app/main/default/objects/Account/fields/Bucket_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Bucket_Changed_Date__c</fullName>
    <label>Bucket Changed Date</label>
    <type>DateTime</type>
</CustomField>