force-app/main/default/objects/Account/fields/Builder_Code__c.field-meta.xml
<CustomField>
    <fullName>Builder_Code__c</fullName>
    <label>Builder Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>