force-app/main/default/objects/Account/fields/Builder_Code_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Builder_Code_Prefix__c</fullName>
    <description>Builder code prefix (e.g. DRH). Prefix that all division codes under this Builder Parent inherit. Builder Account Backend Build Spec Section 2.</description>
    <label>Builder Code Prefix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>