force-app/main/default/objects/Account/fields/Builder_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Builder_Legal_Name__c</fullName>
    <description>Legal entity name for contracts/COI.</description>
    <label>Builder Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>