force-app/main/default/objects/Account/fields/Builder_Notes__c.field-meta.xml
<CustomField>
    <fullName>Builder_Notes__c</fullName>
    <description>Free-text scope of work notes for this builder. Include any special requirements, portal logins, contact preferences, billing quirks, or anything the crew and FM need to know that is not captured in the structured fields above.</description>
    <label>Builder Notes &amp; Special Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>