force-app/main/default/objects/Account/fields/Builder_Portal_Link__c.field-meta.xml
<CustomField>
    <fullName>Builder_Portal_Link__c</fullName>
    <inlineHelpText>URL to the builder&apos;s vendor portal (SupplyPro, HomebuilderONE, BuildPro, etc.).</inlineHelpText>
    <label>Builder Portal Link</label>
    <type>Url</type>
</CustomField>