force-app/main/default/objects/Account/fields/Builder_Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>Builder_Portal_URL__c</fullName>
    <description>Link to the builder&apos;s project management or scheduling portal (SupplyPro, BuilderTREND, etc.).</description>
    <label>Builder Portal URL</label>
    <type>Url</type>
</CustomField>