force-app/main/default/objects/Account/fields/Business_Line__c.field-meta.xml
<CustomField>
    <fullName>Business_Line__c</fullName>
    <label>Business Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Production Landscape</fullName>
            </value>
            <value>
                <fullName>Shared/Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>