force-app/main/default/objects/Account/fields/Care_Guide_Required__c.field-meta.xml
<CustomField>
    <fullName>Care_Guide_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Care Guide Required</label>
    <type>Checkbox</type>
</CustomField>