force-app/main/default/objects/Account/fields/Certs_On_File__c.field-meta.xml
<CustomField>
    <fullName>Certs_On_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Certs on File</label>
    <type>Checkbox</type>
</CustomField>