force-app/main/default/objects/Account/fields/CGL_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>CGL_Aggregate__c</fullName>
    <label>CGL Aggregate (per project)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>