force-app/main/default/objects/Account/fields/CGL_Per_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>CGL_Per_Occurrence__c</fullName>
    <label>CGL Per Occurrence</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>