force-app/main/default/objects/Account/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <description>Community used to select community-specific Price Books.</description>
    <inlineHelpText>Used for community-specific pricing/price books.</inlineHelpText>
    <label>Community</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asheville</fullName>
                <default>true</default>
                <label>Asheville</label>
            </value>
            <value>
                <fullName>Charlotte</fullName>
            </value>
            <value>
                <fullName>Greenville</fullName>
            </value>
            <value>
                <fullName>Spartanburg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>