force-app/main/default/objects/Account/fields/Concentration_Pct_Q__c.field-meta.xml
<CustomField>
    <fullName>Concentration_Pct_Q__c</fullName>
    <description>Revenue concentration: this division's T12M revenue as a share of its parent's total. Cross-object formula with divide-by-zero guard; returns blank (renders as dash) until ParentRollupBatch populates Parent_Revenue_T12M__c. Spec Section 5.1.</description>
    <formula>IF(
  OR( ISBLANK(Parent.Parent_Revenue_T12M__c), Parent.Parent_Revenue_T12M__c = 0 ),
  null,
  Division_Revenue_T12M__c / Parent.Parent_Revenue_T12M__c
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Revenue Concentration %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>