force-app/main/default/objects/Account/fields/Construction_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Construction_License_Number__c</fullName>
    <label>Construction License #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>