force-app/main/default/objects/Account/fields/Construction_Mgr_Email__c.field-meta.xml
<CustomField>
    <fullName>Construction_Mgr_Email__c</fullName>
    <label>Construction Manager — Email</label>
    <type>Email</type>
</CustomField>