force-app/main/default/objects/Account/fields/Construction_Mgr_Name__c.field-meta.xml
<CustomField>
    <fullName>Construction_Mgr_Name__c</fullName>
    <label>Construction Manager — Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>