force-app/main/default/objects/Account/fields/Construction_Mgr_Phone__c.field-meta.xml
<CustomField>
    <fullName>Construction_Mgr_Phone__c</fullName>
    <label>Construction Manager — Phone</label>
    <type>Phone</type>
</CustomField>