force-app/main/default/objects/Account/fields/Customer_Health__c.field-meta.xml
<CustomField>
    <fullName>Customer_Health__c</fullName>
    <label>Customer Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Needs Attention</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>