force-app/main/default/objects/Account/fields/Days_To_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Renewal__c</fullName>
    <description>Days until contract renewal. Negative means overdue. Drives renewal-due chip and report filter. Spec Section 5.3.</description>
    <formula>IF( ISBLANK(Contract_Renewal_Date__c), null, Contract_Renewal_Date__c - TODAY() )</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Days To Renewal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>