force-app/main/default/objects/Account/fields/Days_Until_Target__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Target__c</fullName>
    <formula>IF(ISBLANK(Target_Start_Date__c), null, Target_Start_Date__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Target Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>