force-app/main/default/objects/Account/fields/Designated_Service_Day__c.field-meta.xml
<CustomField>
    <fullName>Designated_Service_Day__c</fullName>
    <label>Designated Service Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Rotating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>