force-app/main/default/objects/Account/fields/Division_Code__c.field-meta.xml
<CustomField>
    <fullName>Division_Code__c</fullName>
    <description>Short code identifying this division account. Example: DRH-CLT. Used in reporting, data imports, and integration mapping.</description>
    <externalId>true</externalId>
    <label>Division Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>