force-app/main/default/objects/Account/fields/Division_Email__c.field-meta.xml
<CustomField>
    <fullName>Division_Email__c</fullName>
    <label>Division Email</label>
    <type>Email</type>
</CustomField>