force-app/main/default/objects/Account/fields/Division_GP_Pct__c.field-meta.xml
<CustomField>
    <fullName>Division_GP_Pct__c</fullName>
    <description>System-maintained: (revenue - cost)/revenue * 100, T12M. FLS read-only.</description>
    <label>Division Gross Profit %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>