force-app/main/default/objects/Account/fields/Division_Office_Address__c.field-meta.xml
<CustomField>
    <fullName>Division_Office_Address__c</fullName>
    <label>Division Office Address</label>
    <type>TextArea</type>
</CustomField>