force-app/main/default/objects/Account/fields/Division_Phone__c.field-meta.xml
<CustomField>
    <fullName>Division_Phone__c</fullName>
    <label>Division Phone</label>
    <type>Phone</type>
</CustomField>