force-app/main/default/objects/Account/fields/Division_Region__c.field-meta.xml
<CustomField>
    <fullName>Division_Region__c</fullName>
    <label>Division / Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>