force-app/main/default/objects/Account/fields/Division_Revenue_T12M__c.field-meta.xml
<CustomField>
    <fullName>Division_Revenue_T12M__c</fullName>
    <label>Division Revenue (T12M)</label>
    <description>Trailing 12-month paid revenue from Invoice__c for this division. Populated nightly by DivisionKpiRecalcBatch.</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>