force-app/main/default/objects/Account/fields/DR_Horton_Tree_Avg__c.field-meta.xml
<CustomField>
    <fullName>DR_Horton_Tree_Avg__c</fullName>
    <label>DR Horton Tree Avg</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>