force-app/main/default/objects/Account/fields/Drainage_Standard__c.field-meta.xml
<CustomField>
    <fullName>Drainage_Standard__c</fullName>
    <inlineHelpText>e.g. 6&quot; exposed foundation, 6&quot; fall per 10 ft</inlineHelpText>
    <label>Drainage Standard</label>
    <length>255</length>
    <type>Text</type>
</CustomField>