force-app/main/default/objects/Account/fields/Drainage_Warranty_Policy__c.field-meta.xml
<CustomField>
    <fullName>Drainage_Warranty_Policy__c</fullName>
    <label>Drainage Warranty Policy</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>