force-app/main/default/objects/Account/fields/Drive_Folder_Link__c.field-meta.xml
<CustomField>
    <fullName>Drive_Folder_Link__c</fullName>
    <label>Shared Drive Folder</label>
    <type>Url</type>
</CustomField>