force-app/main/default/objects/Account/fields/Duration_Condo__c.field-meta.xml
<CustomField>
    <fullName>Duration_Condo__c</fullName>
    <label>Install Duration — Condos</label>
    <length>20</length>
    <type>Text</type>
</CustomField>