force-app/main/default/objects/Account/fields/Duration_SFD_Large__c.field-meta.xml
<CustomField>
    <fullName>Duration_SFD_Large__c</fullName>
    <label>Install Duration — SFD Large</label>
    <length>20</length>
    <type>Text</type>
</CustomField>