force-app/main/default/objects/Account/fields/Duration_SFD_Small__c.field-meta.xml
<CustomField>
    <fullName>Duration_SFD_Small__c</fullName>
    <label>Install Duration — SFD Small</label>
    <length>20</length>
    <type>Text</type>
</CustomField>