force-app/main/default/objects/Account/fields/Duration_Townhome__c.field-meta.xml
<CustomField>
    <fullName>Duration_Townhome__c</fullName>
    <label>Install Duration — Townhomes</label>
    <length>20</length>
    <type>Text</type>
</CustomField>