force-app/main/default/objects/Account/fields/English_Speaking_Crew_Required__c.field-meta.xml
<CustomField>
    <fullName>English_Speaking_Crew_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>English-Speaking Crew Required</label>
    <type>Checkbox</type>
</CustomField>