force-app/main/default/objects/Account/fields/Erosion_Control_Rule__c.field-meta.xml
<CustomField>
    <fullName>Erosion_Control_Rule__c</fullName>
    <label>Erosion Control Rule</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>