force-app/main/default/objects/Account/fields/Erosion_Gully_Repair_Policy__c.field-meta.xml
<CustomField>
    <fullName>Erosion_Gully_Repair_Policy__c</fullName>
    <label>Erosion Gully Repair Policy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>