force-app/main/default/objects/Account/fields/Exhibit_A_Signed__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_A_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exhibit A (Scope of Work) Signed</label>
    <type>Checkbox</type>
</CustomField>