force-app/main/default/objects/Account/fields/Exhibit_B_Signed__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_B_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exhibit B (Payment Terms) Signed</label>
    <type>Checkbox</type>
</CustomField>