force-app/main/default/objects/Account/fields/Exhibit_C_Signed__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_C_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exhibit C (Job Site Rules) Signed</label>
    <type>Checkbox</type>
</CustomField>