force-app/main/default/objects/Account/fields/Exhibit_D_Signed__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_D_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exhibit D (Insurance Reqs) Signed</label>
    <type>Checkbox</type>
</CustomField>