force-app/main/default/objects/Account/fields/FM__c.field-meta.xml
<CustomField>
    <fullName>FM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FM</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>FM</relationshipLabel>
    <relationshipName>Account_FM</relationshipName>
    <type>Lookup</type>
</CustomField>