force-app/main/default/objects/Account/fields/Foundation_Water_Tolerance_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Foundation_Water_Tolerance_Hrs__c</fullName>
    <label>Foundation Water Tolerance (hrs)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>