force-app/main/default/objects/Account/fields/FWO_Required_For_OOS__c.field-meta.xml
<CustomField>
    <fullName>FWO_Required_For_OOS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FWO Required for Out-of-Scope</label>
    <type>Checkbox</type>
</CustomField>