force-app/main/default/objects/Account/fields/Home_Types__c.field-meta.xml
<CustomField>
    <fullName>Home_Types__c</fullName>
    <label>Home Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single-Family Homes</fullName>
            </value>
            <value>
                <fullName>Townhomes</fullName>
            </value>
            <value>
                <fullName>Condos</fullName>
            </value>
            <value>
                <fullName>Multi-Family</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>