force-app/main/default/objects/Account/fields/Install_Complete__c.field-meta.xml
<CustomField>
    <fullName>Install_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Install Complete</label>
    <type>Checkbox</type>
</CustomField>