force-app/main/default/objects/Account/fields/Insurance_COI_Link__c.field-meta.xml
<CustomField>
    <fullName>Insurance_COI_Link__c</fullName>
    <label>Insurance COI Link</label>
    <type>Url</type>
</CustomField>