force-app/main/default/objects/Account/fields/Invoice_Deadline_Days__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Deadline_Days__c</fullName>
    <label>Invoice Deadline (days from completion)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>