force-app/main/default/objects/Account/fields/Invoice_Method_Non_Portal__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Method_Non_Portal__c</fullName>
    <label>Invoice Method (Non-Portal Fallback)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>