force-app/main/default/objects/Account/fields/Invoice_Method_Primary__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Method_Primary__c</fullName>
    <label>Invoice Method (Primary)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>