force-app/main/default/objects/Account/fields/Lien_Waiver_Required__c.field-meta.xml
<CustomField>
    <fullName>Lien_Waiver_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lien Waiver Required</label>
    <type>Checkbox</type>
</CustomField>