force-app/main/default/objects/Account/fields/Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Stage__c</fullName>
    <description>Homeowner relationship lifecycle, computed from Opportunities/WorkOrders/activity and written by ODLLifecycleRecalc for reporting. Source of truth is computed; do not hand-edit.</description>
    <label>Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Active Customer</fullName>
            </value>
            <value>
                <fullName>Repeat Customer</fullName>
            </value>
            <value>
                <fullName>Past Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>