force-app/main/default/objects/Account/fields/Lot_Readiness_Approver__c.field-meta.xml
<CustomField>
    <fullName>Lot_Readiness_Approver__c</fullName>
    <label>Lot Readiness Approver</label>
    <length>100</length>
    <type>Text</type>
</CustomField>