force-app/main/default/objects/Account/fields/Lot_Release_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Lot_Release_Trigger__c</fullName>
    <label>Lot Release Trigger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>