force-app/main/default/objects/Account/fields/Loving_AP__c.field-meta.xml
<CustomField>
    <fullName>Loving_AP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LOVING Accounting / AP</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>LOVING Accounting / AP</relationshipLabel>
    <relationshipName>Loving_AP</relationshipName>
    <type>Lookup</type>
</CustomField>