force-app/main/default/objects/Account/fields/Loving_CSM__c.field-meta.xml
<CustomField>
    <fullName>Loving_CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LOVING Customer Success</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>LOVING Customer Success</relationshipLabel>
    <relationshipName>Loving_CSM</relationshipName>
    <type>Lookup</type>
</CustomField>