force-app/main/default/objects/Account/fields/Loving_FM__c.field-meta.xml
<CustomField>
    <fullName>Loving_FM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LOVING Field Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>LOVING Field Manager</relationshipLabel>
    <relationshipName>Loving_FM</relationshipName>
    <type>Lookup</type>
</CustomField>