force-app/main/default/objects/Account/fields/LOVING_License_Number__c.field-meta.xml
<CustomField>
    <fullName>LOVING_License_Number__c</fullName>
    <label>LOVING License # (as filed)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>