force-app/main/default/objects/Account/fields/Loving_Scheduler__c.field-meta.xml
<CustomField>
    <fullName>Loving_Scheduler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LOVING Scheduling</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>LOVING Scheduling</relationshipLabel>
    <relationshipName>Loving_Scheduler</relationshipName>
    <type>Lookup</type>
</CustomField>