force-app/main/default/objects/Account/fields/Loving_VP_Field_Ops__c.field-meta.xml
<CustomField>
    <fullName>Loving_VP_Field_Ops__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LOVING VP Field Ops</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>LOVING VP Field Ops</relationshipLabel>
    <relationshipName>Loving_VP_Field_Ops</relationshipName>
    <type>Lookup</type>
</CustomField>