force-app/main/default/objects/Account/fields/Loving_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Loving_Warranty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LOVING Warranty</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>LOVING Warranty</relationshipLabel>
    <relationshipName>Loving_Warranty</relationshipName>
    <type>Lookup</type>
</CustomField>