force-app/main/default/objects/Account/fields/Mailing_Same_As_Physical__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Same_As_Physical__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to auto-copy the physical address into the mailing address fields on save.</inlineHelpText>
    <label>Mailing Address Same As Physical</label>
    <type>Checkbox</type>
</CustomField>